app/friends/friends.module.css
.main {
    /* background-color: rgb(40, 40, 40); */
    min-height: 100vh;
    /* max-width: 100vw; */
    background-color: #0f131d;

}

.tab {
    /* height: 40px; */
    background-color: black;
    color: white;
    display: flex;
    align-items: center;
    /* gap: 10px; */
    padding: 5px;
}

.tableContent {
    display: flex;
    justify-content: center;
}

.tableRoot {
    width: 60%;
    border-radius: 30px;
}

.tabsList {
    display: flex;
    justify-content: center;
    background-color: black;
    /* border-radius: 10px solid rgba(141, 141, 141, 0.797); */
    margin: 0;
    width: fit-content;
    margin: auto;
    margin-top: 10px;
    margin-bottom: 10px;
    border-radius: 50px;
}

.tabsTrigger {
    color: white;
}



.backBtn {
    color: white;
    margin: 0px 10px;
    height: 40px;
    width: 40px;
    padding: 2px;
    border-radius: 10px;
}

.backBtn:hover {
    background-color: rgb(33, 33, 33);

}

.main table,
.main th,
.main tr {
    color: white;
    background-color: rgba(1, 4, 22, 0.195);
}
.main table{
    width: 50%;
    margin: auto;
}



.tableCell {
    display: flex;
    gap: 10px;
    align-items: center;
}

.tab p {
    font-size: 28px;
    margin-left: 10px;
}

.acceptActionIcon,
.rejectActionIcon {
    background-color: black;
    color: white;
    border-radius: 5px;
    padding: 5px;
    height: 25px;
    width: 25px;
    transition: all 0.2s;
}

.acceptActionIcon {
    background-color: rgb(7, 193, 7);
}

.rejectActionIcon {
    background-color: red;
}

.acceptActionIcon:hover,
.rejectActionIcon:hover {
    background-color: rgb(78, 78, 78);
}

.acceptActionIcon:active,
.rejectActionIcon:active {
    transform: scale(0.92);
}

.pendingicon {
    color: black;
}

.accepIcon {
    color: rgb(28, 230, 28);
}

.rejIcon {
    color: red;
}

.friendCardHolder{
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    width: 100%;
    margin: 0px 50px;
}


.friendCard {
    background-color: black;
    padding: 10px;
    border-radius: 20px;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.friendProfilePic img {
    border-radius: 10px;
    object-fit: cover;
}



.addContainer {
    margin: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* width: 100%; */
    /* background-color: red; */
}

.searchBar {
    width: 500px;
}

.searchInput {
    /* border: 1px solid white; */
    border-radius: 40px;
    background-color: black;
    color: white;
}

.searchedPeople {
    margin-top: 20px;
    width: 40%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}

.personCard {
    display: flex;
    background-color: black;
    color: white;
    width: 400px;
    padding: 10px;
    border-radius: 10px;
    align-items: center;
    justify-content: space-between;
    vertical-align: middle;
}

.profilePic {
    display: flex;
}

.profilePic img {
    border-radius: 50%;
    margin-right: 20px;
    aspect-ratio: 1/1;
}

.nameHolder {
    display: flex;
    flex-direction: column;
    padding: 0;
    gap: 0px;
    color: white;
}

.name {
    font-size: 20px;
    font-weight: 100;
}

.username {
    font-size: 15px;
    font-weight: 600;
    color: rgb(164, 164, 164);
}

.personCard button {
    margin-right: 20px;
}

.spinner{
    opacity: 1;
    color: white;
    height: 30px;
    margin-top: 30px;
    width: 30px;
}
.friendCardSpinner{
    opacity: 1;
    color: white;
    height: 20px;
    margin-right: 20px;
    width: 25px;
    margin: none;
}
.action{
    display: flex;
    align-items: center;
    justify-content: center;
}

.requestCardHolder{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 10px;
    gap: 10px;
}

